# src/api/api.go
@@ -46,10 +46,11 @@ func RegisterRoutes(r *gin.Engine, cfg *config.Config) {
 		health := v1.Group("/health")
 		test_router := v1.Group("/test" /*, middlewares.Authentication(cfg), middlewares.Authorization([]string{"admin"})*/)
 		users := v1.Group("/users")
-
+		countries := v1.Group("/countries", middlewares.Authentication(cfg), middlewares.Authorization([]string{"admin"}))
 		routers.TestRouter(test_router)
 		routers.Health(health)
 		routers.User(users, cfg)
+		routers.Country(countries, cfg)
 
 	}
 }
